--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,15 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: myFont;
+  src: url(./Sources/fontMy.woff2);
+}
+@font-face {
+  font-family: myFont2;
+  src: url(./Sources/roobert-heavy-webfont.woff);
+}
+.paused{
+  animation-play-state: paused;
 }
